--- a/transpositionCipherPage.html
+++ b/transpositionCipherPage.html
@@ -25,18 +25,6 @@
                 and puzzle magazines, where the message appears as a jumble of letters that can be relatively easy to
                 crack.</p>
         </div>
-<!--     
-        <div class="excaesarCipher">
-            <h2>Example of a Transposition Cipher</h2>
-            <p>Agent X received a coded message from headquarters. The text read: <br><br>
-                <strong>"NIXASNTPISTXPOO"</strong><br><br>
-                Using the key <strong>4-3-1-5-2</strong>, he quickly rearranged the letters, revealing the hidden word. The message was clear—the mission was on. Without hesitation, he destroyed the evidence and disappeared into the night.
-            </p>
-            <br> 
-            <img src="img/EXCEL EXAMPLE-without.png" alt="Cipher Example">
-            <h2>The hidden word: <strong>TRANSPOSITION</strong></h2>
-        </div> -->
-
         <div class="caesarCipherTool">
             <h2>Transposition Cipher Tool</h2>
             <p>Use the tool below to encrypt or decrypt a message using a transposition cipher. Enter the message and the key, then select the desired operation.</p>
@@ -52,6 +40,7 @@
                 <input type="submit" value="Submit">
             </form>
             <p id="result" style="font-weight: bold; margin-top: 10px;"></p>
+            <p><small>*If there are any empty cells, they will be filled with 'X'.</small></p>
          </div>
          
 
